Clicking on inline header jumps to full editor (at correct line number). Adds a wrapper span to the header layout so cursor / click region stays tight around filename label instead of extending across blank part of header.

--- a/src/styles/brackets.less
+++ b/src/styles/brackets.less
@@ -410,21 +410,27 @@ ins.jstree-icon {
 .inline-widget {
     background-color:   @inline-background-color-1;
     
-    .filename {
-        font-family: @fontstack-sans-serif;
-        font-size: 1.1em;
-        color: @inline-color-1;
+    .inline-editor-header {
         padding: 10px 10px 0px 10px;
         
-        .dirty-indicator {
-            .bracket-sprite;
-            display: inline-block;
-            background-position: -32px 0;
-            padding-top: 3px;
-        }
-        
-        .line-number {
-            color: @inline-color-2;
+        .filename {
+            font-family: @fontstack-sans-serif;
+            font-size: 1.1em;
+            color: @inline-color-1;
+            
+            // Filename header is clickable
+            cursor: pointer;
+            
+            .dirty-indicator {
+                .bracket-sprite;
+                display: inline-block;
+                background-position: -32px 0;
+                padding-top: 3px;
+            }
+            
+            .line-number {
+                color: @inline-color-2;
+            }
         }
     }
     
